# vitrage-specs

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  README.rst  bindep.txt  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst  redirect.py
specs/: template.rst
specs/mitaka/: README.rst  aodh-notifier.rst  entity-graph-change-notifications.rst  entity-graph-consistency-validator.rst  networkx-graph-driver.rst  networkx-performance-improvement.rst  nova-entity-transformer.rst  synchronizer-aodh-get-all.rst  synchronizer-nagios-get-all.rst  ui-system-health-visualization.rst  vitrage-api-get-topology.rst  vitrage-cli.rst  vitrage-evaluator-engine.rst  vitrage-resource-processor.rst  vitrage-support-deduced-alarms.rst  vitrage-support-rca.rst  vitrage-synchronizer.rst  vitrage-template-validator.rst
specs/newton/: heat-datasource.rst  template-list-api.rst  template-validate-api.rst
specs/ocata/: aodh-message-bus-notifications.rst  collectd-datasource.rst  datasource-skeleton-generator.rst  doctor-datasource.rst  event-api.rst  multi-tenancy-support.rst  static-datasource-configuration.rst  vitrage-id.rst
specs/pike/: alarm-counts-api.rst  db-support.rst  entity-equivalence.rst  external-actions.rst  httppost-notifications.rst  osprofiler-support.rst  parallel-evaluation.rst  resource-list-api.rst  resource-show-api.rst  snmp-notifications.rst
specs/pike/approved/: httppost-registration.rst  integration-with-mistral.rst
specs/pike/implemented/: entity-equivalence.rst  integration-with-mistral.rst  keycloak.rst  (+1 more)
tests/: test_titles.py
(+21 files in other folders)
