[metadata]
name = vitrage-specs
summary = OpenStack Vitrage Project Development Specs
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://specs.openstack.org/openstack/vitrage-specs/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[pbr]
warnerrors = True

[wheel]
universal = 1
